--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
                             <input type="password" class="login__input mt-0" placeholder="Password">
                             <a href="#" class="login__fgpw">Forgot?</a>
                         </div>
-                        <button class="cta__button btn login__btn">Sign in</button>
+                        <a href="dashboard.html" class="cta__button btn login__btn">Sign in</a>
                     </form>
 
                     <div class="login__divider">
@@ -83,7 +83,8 @@
                             <input type="password" class="login__input mt-0" placeholder="Password">
                             <a href="#" class="login__fgpw">Forgot?</a>
                         </div>
-                        <button class="cta__button btn login__btn">Sign in</button>
+                        <a href="dashboard.html" class="cta__button btn login__btn d-block">Sign
+                            in</a>
                     </form>
 
                     <div class="login__divider">
