--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
                 <input type="password" class="login__input" placeholder="Confirm Password">
 
                 <p class="login__ngtv">By clicking the button you agree to <a href="#">Terms of use</a></p>
-                <button class="cta__button btn login__btn">Create account</button>
+                <a href="dashboard.html" class="cta__button btn login__btn">Create account</a>
             </form>
             <div class="login__divider">
                 <hr>
